--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/gif" href="assets/icon.png" />
   </head>
   <body>
+  	<div class="loader"><img src="assets/ajax-loader.gif"></div>
   	<div class="wrapper">
   		<div class = "content-wrapper">
 		    <div class = "container">
