--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
   	<div class="loader"><img src="assets/ajax-loader.gif"></div>
+  	<div class = "dev"><h4>Under Development</h4><br><p>Please, open on desktop</p></div> 
   	<div class="wrapper">
   		<div class = "content-wrapper">
 		    <div class = "container">
