With text crousel

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <p class = "intro">Hi</p>
           </div>
           <div class = "col-md-12 intro-para">
-            <p>Me, Shubham.</p>
-            <p>I code.</p>
+            <p>I am Shubham.</p>
+            <p>I specialise in<span class="txt-rotate"
+              data-period="500"
+              data-rotate='[ " Machine Learning.", " C/C++ Programming.", " Python Programming."]'></span></p>
           </div>
         </div>
         <div class = "row">
