--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!--<link rel="stylesheet" type="text/css" href="loader.css">-->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shubham's Portfolio</title>
+    <link rel="stylesheet" href="style2.css">
     <link rel="icon" type="image/gif" href="assets/icon.png" />
-  </head>
-  <body>
-      <div class="container">
-            <div class = "row">
-                <div class="col-md-12">
-                    <h3 style="text-align: center; margin-top: 25%;">Under Development</h3>
-                </div>
-            </div>
-        </div>
-  </body>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+</head>
+<body>
+    <div class = "box">
+        <img class = 'dp' src="assets/dp.jpg">
+        <h1>Shubham Pandey</h1>
+        <p>I'm a Software Engineer based in California, United States.</p> <br>
+        <p>Currently, I am pursuing MS in Computer Science at UC, Davis. I develop Systems and Web Applications.</p>
+        <footer>
+            <a href = "https://www.linkedin.com/in/shubhampandey96/" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href = ""  alt = "Resume"><i class="far fa-file"></i></a>
+            <a href = "https://github.com/p-shubham"  alt = "github"><i class="fab fa-github"></i></a>
+        </footer>
+    </div>
+</body>
 </html>
