--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <img class = 'dp' src="assets/dp.jpg">
         <h1>Shubham Pandey</h1>
         <p>I'm a Software Engineer based in California, United States.</p> <br>
-        <p>Currently, I am pursuing MS in Computer Science at UC, Davis. I develop Systems and Web Applications.</p>
+        <p>Currently, I am pursuing MS in Computer Science at UC, Davis.<br> I specialize in Systems and Machine Learning.</p>
+        <br>
+        <p>Occasionally, I make websites for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href = ""  alt = "Resume"><i class="far fa-file"></i></a>
