--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>I'm a Software Engineer based in California, United States.</p> <br>
         <p>Currently, I am pursuing MS in Computer Science at UC, Davis.<br> I specialize in Systems and Machine Learning.</p>
         <br>
-        <p>Occasionally, I make websites for fun!</p>
+        <p>I develop Front-End applications for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href = ""  alt = "Resume"><i class="far fa-file"></i></a>
