--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <div class = "box">
         <img class = 'dp' src="assets/dp.jpg">
         <h1>Shubham Pandey</h1>
-        <p>I'm a Software Engineer based in California, United States.</p> <br>
-        <p>Currently, I am pursuing MS in Computer Science at UC, Davis.<br> I specialize in Systems and Machine Learning.</p>
-        <br>
-        <p>I develop Front-End applications for fun!</p>
+        <p>I am a Software Engineer based in California, United States. I enjoy developing Systems Applications and Machine Learning algorithms. I occasionally develop Front End Applications, just for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href = ""  alt = "Resume"><i class="far fa-file"></i></a>
