--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>I am a Software Engineer based in California, United States. I enjoy developing Systems Applications and Machine Learning algorithms. I occasionally develop Front End Applications, just for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href = ""  alt = "Resume"><i class="far fa-file"></i></a>
+            <a href = "https://1drv.ms/w/s!Ajlr3xIfDFv4lhNrUoPUczsf22rQ?e=JRLPA0"  alt = "Resume"><i class="far fa-file"></i></a>
             <a href = "https://github.com/p-shubham"  alt = "github"><i class="fab fa-github"></i></a>
         </footer>
     </div>
