--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>I am a Software Engineer based in California, United States. I enjoy developing Systems Applications and Machine Learning algorithms. I occasionally develop Front End Applications, just for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" target = "_blank" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href = "https://1drv.ms/b/s!Ajlr3xIfDFv4lmh1Gz9lZsN6ip-x?e=RPHv5h" target = "_blank" alt = "Resume"><i class="far fa-file"></i></a>
+            <a href = "https://1drv.ms/b/s!Ajlr3xIfDFv4lmm92i-xvGuWNWsT?e=1zLi9M" target = "_blank" alt = "Resume"><i class="far fa-file"></i></a>
             <a href = "https://github.com/p-shubham" target = "_blank" alt = "github"><i class="fab fa-github"></i></a>
         </footer>
     </div>
