--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>I am a Software Engineer based in California, United States. I enjoy developing Systems Applications and Machine Learning algorithms. I occasionally develop Front End Applications, just for fun!</p>
         <footer>
             <a href = "https://www.linkedin.com/in/shubhampandey96/" target = "_blank" alt = "LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href = "https://1drv.ms/b/s!Ajlr3xIfDFv4lm9INvrvaQZ-NfpK?e=Rq9CcH" target = "_blank" alt = "Resume"><i class="far fa-file"></i></a>
+            <a href = "https://1drv.ms/b/s!Ajlr3xIfDFv4lnES2TweToA0swrj?e=f3zeQR" target = "_blank" alt = "Resume"><i class="far fa-file"></i></a>
             <a href = "https://github.com/p-shubham" target = "_blank" alt = "github"><i class="fab fa-github"></i></a>
         </footer>
     </div>
